force-app/main/default/objects/AR_Credit_Note_Applied_For__c/fields/Applied_Amount_Without_Vat__c.field-meta.xml
<CustomField>
    <fullName>Applied_Amount_Without_Vat__c</fullName>
    <formula>Applied_Amount__c / (1+Credit_Note__r.Vat__r.Vat__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applied Amount Without Vat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>