force-app/main/default/objects/AR_Credit_Note_Applied_For__c/fields/Applied_Vat_Amount__c.field-meta.xml
<CustomField>
    <fullName>Applied_Vat_Amount__c</fullName>
    <formula>Applied_Amount__c -  Applied_Amount_Without_Vat__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applied Vat Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>