force-app/main/default/objects/AR_Credit_Note_Applied_For__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Invoice</label>
    <referenceTo>AR_Invoice__c</referenceTo>
    <relationshipName>Credit_Notes_Applied_For</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>