force-app/main/default/objects/AR_Credit_Note_Applied_For__c/fields/Unapplication_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Unapplication_Date_Time__c</fullName>
    <label>Unapplication Date/Time</label>
    <type>DateTime</type>
</CustomField>